@@ -1,14 +1,14 @@
 package by.innowise.moviereview.controller;
 
-import by.innowise.moviereview.dto.EntityDto;
 import by.innowise.moviereview.dto.MovieDto;
-import by.innowise.moviereview.dto.PersonDto;
 import by.innowise.moviereview.exception.EntityNotFoundException;
 import by.innowise.moviereview.service.GenreService;
 import by.innowise.moviereview.service.MovieService;
 import by.innowise.moviereview.service.PersonService;
 import by.innowise.moviereview.util.enums.MovieRole;
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -20,15 +20,13 @@ import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.multipart.MultipartHttpServletRequest;
+import org.springframework.web.multipart.support.StandardServletMultipartResolver;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.util.Base64;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/admin/movies")
@@ -37,12 +35,14 @@ public class MovieController {
     private final MovieService movieService;
     private final GenreService genreService;
     private final PersonService personService;
+    private final StandardServletMultipartResolver multipartResolver;
 
     @Autowired
-    public MovieController(MovieService movieService, GenreService genreService, PersonService personService) {
+    public MovieController(MovieService movieService, GenreService genreService, PersonService personService, StandardServletMultipartResolver multipartResolver) {
         this.movieService = movieService;
         this.genreService = genreService;
         this.personService = personService;
+        this.multipartResolver = multipartResolver;
     }
 
     @GetMapping
@@ -74,23 +74,27 @@ public class MovieController {
 
     @PostMapping
     public String createMovie(@ModelAttribute MovieDto movieDto,
-                              @RequestParam("posterFile") MultipartFile posterFile) throws IOException {
+                              HttpServletRequest request) throws IOException {
+        MultipartHttpServletRequest multipartRequest = multipartResolver.resolveMultipart(request);
+        MultipartFile posterFile = multipartRequest.getFile("posterFile");
         processPosterFile(movieDto, posterFile);
         movieService.createMovie(movieDto);
         return "redirect:/admin/movies";
     }
 
     @PutMapping("/{id}")
-    public String updateMovie(@PathVariable Long id,
+    public String updateMovie(@PathVariable("id") Long id,
                               @ModelAttribute MovieDto movieDto,
-                              @RequestParam("posterFile") MultipartFile posterFile) throws IOException, EntityNotFoundException {
+                              HttpServletRequest request) throws IOException, EntityNotFoundException {
+        MultipartHttpServletRequest multipartRequest = multipartResolver.resolveMultipart(request);
+        MultipartFile posterFile = multipartRequest.getFile("posterFile");
         processPosterFile(movieDto, posterFile);
         movieService.updateMovie(id, movieDto);
         return "redirect:/admin/movies";
     }
 
     @DeleteMapping("/{id}")
-    public String deleteMovie(@PathVariable Long id) {
+    public String deleteMovie(@PathVariable("id") Long id) {
         try {
             movieService.deleteMovie(id);
             return "redirect:/admin/movies";
@@ -105,38 +109,13 @@ public class MovieController {
             String posterBase64 = Base64.getEncoder().encodeToString(posterBytes);
             movieDto.setPosterBase64(posterBase64);
         } else {
-            Path defaultPosterPath = Paths.get("src/main/resources/static/images/default-poster.png");
-            byte[] defaultPosterBytes = Files.readAllBytes(defaultPosterPath);
-            String defaultPosterBase64 = Base64.getEncoder().encodeToString(defaultPosterBytes);
-            movieDto.setPosterBase64(defaultPosterBase64);
+            ClassPathResource defaultPosterResource = new ClassPathResource("static/images/default-poster.png");
+            try (InputStream inputStream = defaultPosterResource.getInputStream()) {
+                byte[] defaultPosterBytes = inputStream.readAllBytes();
+                String defaultPosterBase64 = Base64.getEncoder().encodeToString(defaultPosterBytes);
+                movieDto.setPosterBase64(defaultPosterBase64);
+            }
         }
     }
 
-    @ModelAttribute("genres")
-    public List<String> populateGenres() {
-        return genreService.findAll().stream()
-                .map(EntityDto::getName)
-                .toList();
-    }
-
-    @ModelAttribute("actors")
-    public Set<String> populateActors() {
-        return personService.getAllPeopleByRole(MovieRole.ACTOR).stream()
-                .map(PersonDto::getFullName)
-                .collect(Collectors.toSet());
-    }
-
-    @ModelAttribute("directors")
-    public Set<String> populateDirectors() {
-        return personService.getAllPeopleByRole(MovieRole.DIRECTOR).stream()
-                .map(PersonDto::getFullName)
-                .collect(Collectors.toSet());
-    }
-
-    @ModelAttribute("producers")
-    public Set<String> populateProducers() {
-        return personService.getAllPeopleByRole(MovieRole.PRODUCER).stream()
-                .map(PersonDto::getFullName)
-                .collect(Collectors.toSet());
-    }
 }
